# zephyr-vm

./: Cargo.toml  README.md
documentation/: book.toml
documentation/book/: 404.html  contracts-map.html  examples.html  hello-ledger-cli.html  hello-ledger.html  index.html  intro.html  print.html  reference.html  sac-events.track.html  searchindex.js  searchindex.json  setup.html
documentation/src/: SUMMARY.md  contracts-map.md  examples.md  hello-ledger-cli.md  hello-ledger.md  intro.md  reference.md  sac-events.track.md  setup.md  stack.md
env/: Cargo.toml
env/src/: budget.rs  error.rs  host.rs  lib.rs  symbol.rs  vm.rs  vm_context.rs
env/src/db/: database.rs  error.rs  mod.rs  shield.rs
env/src/native/: database.rs
examples/: README.md
examples/alloc/: Cargo.toml
examples/alloc/src/: lib.rs
examples/functions/entries-filter/: Cargo.toml
examples/functions/entries-filter/src/: lib.rs
examples/functions/instance-read/: Cargo.toml
examples/functions/instance-read/src/: lib.rs
examples/read-simple/: Cargo.toml
examples/read-simple/src/: lib.rs
examples/simple/: Cargo.toml
examples/simple/src/: lib.rs
examples/update-simple/: Cargo.toml  zephyr.toml
examples/update-simple/src/: lib.rs
function-execution/: Cargo.toml
function-execution/src/: lib.rs
ingestion-event-catchup/: Cargo.toml
ingestion-event-catchup/src/: caching.rs  database.rs  jobs_manager.rs  ledger.rs  lib.rs  query.rs
inner-serverless-handler/: Cargo.toml  README.md
inner-serverless-handler/src/: caching.rs  database.rs  jobs_manager.rs  lib.rs  query.rs
ledger-meta-factory/: Cargo.toml  README.md
ledger-meta-factory/src/: ledger.rs  lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
rs-zephyr-common/: Cargo.toml
rs-zephyr-common/src/: http.rs  lib.rs  log.rs  wrapping.rs
rs-zephyr-env/: Cargo.toml  README.md  env.json
rs-zephyr-env/src/: budget.rs  error.rs  host.rs  lib.rs  snapshot.rs  soroban_host_gen.rs  stack.rs  trace.rs  vm.rs  vm_context.rs
rs-zephyr-env/src/db/: database.rs  error.rs  ledger.rs  mod.rs  shield.rs
rs-zephyr-env/src/host/: database.rs  memory.rs  soroban.rs  utils.rs
rs-zephyr-env/src/native/: database.rs  mod.rs
rs-zephyr-env/src/test/: database.rs  mod.rs  soroban.rs
rs-zephyr-env/src/testutils/: database.rs  mod.rs  symbol.rs
rs-zephyr-sdk/: Cargo.toml  README.md  README.md~
rs-zephyr-sdk/src/: database.rs  ledger.rs  ledger_meta.rs  lib.rs  symbol.rs
src/: budget.rs  error.rs  host.rs  lib.rs  stack.rs  symbol.rs  vm.rs
src/native/: mod.rs
wasm-tests/db-write-read/: Cargo.toml  zephyr.toml
wasm-tests/db-write-read/src/: lib.rs
wasm-tests/db-write-update-read/: Cargo.toml  zephyr.toml
wasm-tests/db-write-update-read/src/: lib.rs
wasm-tests/soroban-host/: Cargo.toml  zephyr.toml
wasm-tests/soroban-host/src/: lib.rs
zephyr-cli/: Cargo.toml
zephyr-cli/src/: error.rs  lib.rs  main.rs  parser.rs
