[workspace]
resolver = "2"
members = [
    "rs-zephyr-env", 
    "rs-zephyr-sdk",
    "examples/alloc",
    "examples/simple",
    "zephyr-cli",
]


[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
