[workspace]
resolver = "2"
members = [
    "rs-zephyr-env", 
    "rs-zephyr-sdk",
    "rs-zephyr-common",
    "examples/simple",
    "examples/read-simple",
    "examples/update-simple",
    "examples/functions/instance-read",
    "examples/functions/entries-filter",
    "zephyr-cli",
    "function-execution",
    "ingestion-event-catchup",
    "macros"
]


[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
