[workspace]
resolver = "2"
members = [
    "rs-zephyr-env", 
    "rs-zephyr-common",
    "macros", 
    "wasm-tests/db-write-read", 
    "wasm-tests/db-write-update-read"
, "wasm-tests/soroban-host", "ledger-meta-factory"]


[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
