[package]
name = "ingestion-event-catchup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.8"
rusqlite = "0.31.0"
zephyr = { path = "../rs-zephyr-env", features = ["testutils"] }
rs-zephyr-common = { path = "../rs-zephyr-common" }
#stellar-xdr = { version = "20.1.0", default-features = false, features=["next", "curr", "serde", "base64"] }
anyhow = "1.0.75"
bincode = "1.0"
warp = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
postgres = {version="0.19.7", features=["with-serde_json-1"]}
hex = "0.4.3"
tokio-postgres = "0.7.10"
stellar-strkey = "0.0.7"
async-trait = "0.1.0"
persy = "1.5.0"

[dependencies.soroban-env-host]
path = "../../rs-soroban-env/soroban-env-host"
features = ["testutils", "next"]

#[dependencies.stellar-xdr]
#version = "=20.1.0"
#git = "https://github.com/stellar/rs-stellar-xdr"
#rev = "44b7e2d4cdf27a3611663e82828de56c5274cba0"
#features=["next", "curr", "serde", "base64"]
