[package]
name = "ledger-meta-factory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stellar-strkey = "0.0.8"
anyhow = "1.0.75"

[dev-dependencies]
zephyr-sdk = { path = "../../rs-zephyr-sdk/zephyr-sdk" }

[dev-dependencies.soroban-sdk]
version = "20.0.5"
features = ["alloc"]


[dependencies.stellar-xdr]
version = "=20.1.0"
git = "https://github.com/stellar/rs-stellar-xdr"
rev = "44b7e2d4cdf27a3611663e82828de56c5274cba0"
features=["next", "curr", "serde", "base64"]
