[package]
name = "ledger-meta-factory"
version = "0.1.2"
edition = "2021"
authors = ["Tommaso De Ponti @ xyclooLabs <tommaso@xycloo.com>"]
description = "Utility for building customized Stellar ledger transitions."
documentation = "https://docs.mercurydata.app/"
homepage = "https://mercurydata.app/zephyr-vm/"
keywords = ["stellar", "soroban", "blockchain"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stellar-strkey = "0.0.8"
anyhow = "1.0.75"

[dev-dependencies]
#zephyr-sdk = { path = "../../rs-zephyr-sdk/zephyr-sdk" }
zephyr-sdk = {git = "https://github.com/xycloo/rs-zephyr-toolkit/", branch="stellar-main-2"}

[dev-dependencies.soroban-sdk]
version = "21.5.0"
features = ["alloc"]


[dependencies.stellar-xdr]
version = "=22.0.0-rc.1.1"
#git = "https://github.com/stellar/rs-stellar-xdr"
#rev = "44b7e2d4cdf27a3611663e82828de56c5274cba0"
features=["next", "curr", "serde", "base64"]
