[package]
name = "rs-zephyr-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.49"
serde = { version = "1.0", features = ["derive"] }
#stellar-xdr = { version = "20.1.0", default-features = false, features=["next", "curr", "serde", "base64"] }
http = "1.1.0"

[dependencies.stellar-xdr]
version = "=20.1.0"
git = "https://github.com/stellar/rs-stellar-xdr"
rev = "44b7e2d4cdf27a3611663e82828de56c5274cba0"
features=["next", "curr", "serde", "base64"]
