[package]
name = "zephyr"
version = "0.0.1-rc1"
edition = "2021"

[dependencies]
wasmi = { version = "0.31.1" }
# wasmtime = "16.0.0"
anyhow = "1.0.75"
thiserror = "1.0.48"
#sha2 = "0.10.7"
postgres = {version="0.19.7", features=["with-serde_json-1"], optional = true}
postgres-types = { version = "0.2.6", features = ["derive", "with-chrono-0_4", "with-time-0_3"], optional = true }
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
md5 = "0.7.0"
rs-zephyr-common = {path="../rs-zephyr-common"}
#stellar-xdr = { version = "20.1.0", default-features = false, features=["next", "curr", "serde", "base64"] }
tokio = {version = "1.0", features = ["full"]}
log = "0.4.20"
rusqlite = "0.31.0"
stellar-strkey = "0.0.8"

[dependencies.soroban-simulation]
path = "../../rs-soroban-env/soroban-simulation"

[dependencies.stellar-xdr]
version = "=20.1.0"
git = "https://github.com/stellar/rs-stellar-xdr"
rev = "44b7e2d4cdf27a3611663e82828de56c5274cba0"
features=["next", "curr", "serde", "base64"]

[dependencies.soroban-env-host]
path = "../../rs-soroban-env/soroban-env-host"
features = ["testutils", "next"]

[dependencies.soroban-env-macros]
path = "../../rs-soroban-env/soroban-env-macros"


[features]
default = ["testutils"]
host_only = []
testutils = ["dep:postgres", "dep:postgres-types"]
