[package]
name = "zephyr"
version = "0.1.0"
edition = "2021"
authors = ["Tommaso De Ponti @ xyclooLabs <tommaso@xycloo.com>"]
description = "The first Blockchain data focused cloud computing web assembly virtual machine. Currently on Stellar."
documentation = "https://docs.mercurydata.app/"
homepage = "https://mercurydata.app/zephyr-vm/"
keywords = ["wasm", "sdk", "blockchain", "stellar", "soroban"]
license = "Apache-2.0"

[dependencies]
wasmi = { version = "0.31.1" }
anyhow = "1.0.75"
thiserror = "1.0.48"
sha2 = "0.10.8"
postgres = {version="0.19.7", features=["with-serde_json-1"], optional = true}
tokio-postgres = { version = "0.7.10", optional = true }
postgres-types = { version = "0.2.6", features = ["derive", "with-chrono-0_4", "with-time-0_3"], optional = true }
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
md5 = "0.7.0"
rs-zephyr-common = { version = "0.1.3" }
#rs-zephyr-common = {path="../../rs-zephyr-sdk/zephyr-common"}
tokio = {version = "1.0", features = ["full"]}
log = "0.4.20"
rusqlite = "0.31.0"
stellar-strkey = "0.0.8"
hex = "0.4.3"
ledger-meta-factory = {version = "0.1.0", path = "../ledger-meta-factory", optional = true}

[dependencies.soroban-simulation]
package = "soroban-simulation-zephyr"
path = "../../rs-soroban-env/soroban-simulation"
version = "21.0.2"

[dependencies.stellar-xdr]
version = "=20.1.0"
#git = "https://github.com/stellar/rs-stellar-xdr"
#rev = "44b7e2d4cdf27a3611663e82828de56c5274cba0"
features=["next", "curr", "serde", "base64"]

[dependencies.soroban-env-host]
package = "soroban-env-host-zephyr"
path = "../../rs-soroban-env/soroban-env-host"
version = "21.0.2"
features = ["testutils", "next"]

[dependencies.soroban-env-macros]
package = "soroban-env-macros-zephyr"
path = "../../rs-soroban-env/soroban-env-macros"
version = "21.0.2"

[features]
default = ["testutils"]
host_only = []
testutils = ["dep:postgres", "dep:tokio-postgres", "dep:postgres-types", "dep:ledger-meta-factory"]
