[package]
name = "zephyr-vm"
version = "0.2.1"
edition = "2021"
authors = ["Tommaso De Ponti @ xyclooLabs <tommaso@xycloo.com>"]
description = "The first Blockchain data focused cloud computing web assembly virtual machine. Currently on Stellar."
documentation = "https://docs.mercurydata.app/"
homepage = "https://mercurydata.app/zephyr-vm/"
keywords = ["wasm", "sdk", "blockchain", "stellar", "soroban"]
license = "Apache-2.0"

[dependencies]
wasmi = { version = "0.32" }
anyhow = "1.0.75"
thiserror = "1.0.48"
sha2 = "0.10.8"
postgres = { version = "0.19.9", features = [
    "with-serde_json-1",
], optional = true }
tokio-postgres = { version = "0.7.12", optional = true }
postgres-types = { version = "0.2.6", features = [
    "derive",
    "with-chrono-0_4",
    "with-time-0_3",
], optional = true }
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
md5 = "0.7.0"

reqwest = { version = "0.11.27", features = ["json"], optional = true }
serde_json = { version = "1.0", optional = true }

rand = "0.8.5"

#rs-zephyr-common = { version = "0.1.8" }
rs-zephyr-common = {path="../../rs-zephyr-sdk/zephyr-common"}
#rs-zephyr-common = {git = "https://github.com/xycloo/rs-zephyr-toolkit/", branch="stellar-main-2"}

tokio = { version = "1.0", features = ["full"] }
log = "0.4.20"
rusqlite = "0.31.0"
stellar-strkey = "0.0.8"
hex = "0.4.3"
ledger-meta-factory = { version = "0.1.4", path = "../ledger-meta-factory", optional = true }
#ledger-meta-factory = {  git = "https://github.com/xycloo/zephyr.git", branch="add-traces", optional = true }

[dependencies.soroban-simulation]
package = "soroban-simulation-zephyr"
path = "../../rs-soroban-env/soroban-simulation"
#branch = "stellar-main-2"
#version = "21.2.2"

#git = "https://github.com/heytdep/rs-soroban-env"
#rev = "4ab2b6c"

[dependencies.stellar-xdr]
version = "=22.1.0"
#git = "https://github.com/stellar/rs-stellar-xdr"
#rev = "44b7e2d4cdf27a3611663e82828de56c5274cba0"
features = ["next", "curr", "serde", "base64"]

[dependencies.soroban-env-host]
package = "soroban-env-host-zephyr"
path = "../../rs-soroban-env/soroban-env-host"

#branch = "stellar-main-2"
#version = "21.2.2"

#git = "https://github.com/heytdep/rs-soroban-env"
#rev = "4ab2b6c"
features = ["testutils", "next"]

[dependencies.soroban-env-macros]
package = "soroban-env-macros-zephyr"
path = "../../rs-soroban-env/soroban-env-macros"

#branch = "stellar-main-2"

#git = "https://github.com/heytdep/rs-soroban-env"
#rev = "4ab2b6c"
#version = "21.2.2"


[features]
default = ["testutils"]
host_only = []
testutils = [
    "dep:postgres",
    "dep:tokio-postgres",
    "dep:postgres-types",
    "dep:ledger-meta-factory",
    "dep:reqwest",
    "dep:serde_json",
]
