[package]
name = "rs-zephyr-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
wee_alloc = "0.4.5"
stellar-xdr = { version = "20.0.1", default-features = false, features=["next", "serde", "base64"] }
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.49"
rs-zephyr-common = {path="../rs-zephyr-common"}
