[package]
name = "instance-read"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stellar-xdr = { version = "20.0.0-rc1", default-features = false, features=["next", "serde", "base64"] }
rs-zephyr-sdk = { path="../../../rs-zephyr-sdk" }
hex = "0.4.3"
stellar-strkey = "0.0.8"
sha2 = "0.10.8"

[lib]
crate-type = ["cdylib"]
doctest = false
